--- a/mapa1_knjiz/style.css
+++ b/mapa1_knjiz/style.css
@@ -13,14 +13,15 @@ body {
   height: 80px;
   width: 100%;
   font-family:Arial, Helvetica, sans-serif;
-  background-color: rgb(128, 128, 128);
-  color: rgb(248, 248, 248);
+  background-color: rgb(10, 208, 85);
+  color: white;
   font-size: 16px;
 }
 
 #map {
   height: 100%;
 }
+
 
 #nav {
   z-index: 1;
@@ -74,7 +75,8 @@ body {
 
 @media only screen and (max-width: 600px) {
   #head{
+    padding: 10px;
     font-size: 10px;
-    height: 60px;
+    height: 50px;
   }
 }
