--- a/mapa2_wifi/style.css
+++ b/mapa2_wifi/style.css
@@ -13,14 +13,16 @@ body {
   height: 80px;
   width: 100%;
   font-family:Arial, Helvetica, sans-serif;
-  background-color: rgb(128, 128, 128);
-  color: rgb(248, 248, 248);
+  background-color: rgb(0, 195, 255);
+  color: white;
   font-size: 16px;
 }
 
 #map {
   height: 100%;
 }
+
+
 
 #nav {
   z-index: 1;
