--- a/mapa3_bike/style.css
+++ b/mapa3_bike/style.css
@@ -13,8 +13,8 @@ body {
   height: 80px;
   width: 100%;
   font-family:Arial, Helvetica, sans-serif;
-  background-color: rgb(128, 128, 128);
-  color: rgb(248, 248, 248);
+  background-color: #E5261F;
+  color: white;
   font-size: 16px;
 }
 
@@ -70,7 +70,6 @@ body {
   width: 46px;
   height: 46px;
 } 
-
 
 @media only screen and (max-width: 600px) {
   #head{
