--- a/mapa4_graf/style.css
+++ b/mapa4_graf/style.css
@@ -13,14 +13,15 @@ body {
   height: 80px;
   width: 100%;
   font-family:Arial, Helvetica, sans-serif;
-  background-color: rgb(128, 128, 128);
-  color: rgb(248, 248, 248);
+  background-color: #FFCF1D;
+  color: white;
   font-size: 16px;
 }
 
 #map {
   height: 100%;
 }
+
 
 #nav {
   z-index: 1;
@@ -70,7 +71,6 @@ body {
   width: 46px;
   height: 46px;
 } 
-
 
 @media only screen and (max-width: 600px) {
   #head{
