--- a/mapa4_graf/style.css
+++ b/mapa4_graf/style.css
@@ -74,7 +74,8 @@ body {
 
 @media only screen and (max-width: 600px) {
   #head{
+    padding: 10px;
     font-size: 10px;
-    height: 60px;
+    height: 50px;
   }
 }
