--- a/mapa3_bike/style.css
+++ b/mapa3_bike/style.css
@@ -73,7 +73,7 @@ body {
 
 @media only screen and (max-width: 600px) {
   #head{
-    padding: 10px;
+    padding:10px 0px;
     font-size: 10px;
     height: 50px;
   }
