--- a/mapa1_knjiz/style.css
+++ b/mapa1_knjiz/style.css
@@ -13,7 +13,7 @@ body {
   height: 80px;
   width: 100%;
   font-family:Arial, Helvetica, sans-serif;
-  background-color: rgb(10, 208, 85);
+  background-color: #0AD055;
   color: white;
   font-size: 16px;
 }
@@ -22,13 +22,14 @@ body {
   height: 100%;
 }
 
+
 #nav {
   z-index: 1;
   position: absolute;
   top: 90%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 100%;
+  width: 80%;
   height: 60px;
   display: flex;
   align-items: center; 
@@ -71,9 +72,10 @@ body {
   height: 46px;
 } 
 
+
 @media only screen and (max-width: 600px) {
   #head{
-    padding:10px 0px;
+    padding: 10px;
     font-size: 10px;
     height: 50px;
   }
