--- a/mapa2_wifi/style.css
+++ b/mapa2_wifi/style.css
@@ -13,7 +13,7 @@ body {
   height: 80px;
   width: 100%;
   font-family:Arial, Helvetica, sans-serif;
-  background-color: rgb(0, 195, 255);
+  background-color: #00C3FF;
   color: white;
   font-size: 16px;
 }
@@ -30,7 +30,7 @@ body {
   top: 90%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 100%;
+  width: 80%;
   height: 60px;
   display: flex;
   align-items: center; 
@@ -73,10 +73,10 @@ body {
   height: 46px;
 } 
 
+
 @media only screen and (max-width: 600px) {
   #head{
-    padding:10px 0px;
     font-size: 10px;
-    height: 50px;
+    height: 60px;
   }
 }
