--- a/mapa4_graf/style.css
+++ b/mapa4_graf/style.css
@@ -29,7 +29,7 @@ body {
   top: 90%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 100%;
+  width: 80%;
   height: 60px;
   display: flex;
   align-items: center; 
@@ -54,13 +54,12 @@ body {
   text-decoration: none;
   width: 60px;
   height: 60px;
-  background-color: rgb(255, 255, 255);
+  background-color: #ffffff;
   border: 1px solid black;
   border-radius: 10px;
   display: flex;
   align-items: center; 
   justify-content: center;
-
 }
 
 #nav ul li a:link, #nav ul li a:visited {
@@ -74,8 +73,7 @@ body {
 
 @media only screen and (max-width: 600px) {
   #head{
-    padding:10px 0px;
     font-size: 10px;
-    height: 50px;
+    height: 60px;
   }
 }
