--- a/mapa1_knjiz/style.css
+++ b/mapa1_knjiz/style.css
@@ -22,14 +22,13 @@ body {
   height: 100%;
 }
 
-
 #nav {
   z-index: 1;
   position: absolute;
   top: 90%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 80%;
+  width: 100%;
   height: 60px;
   display: flex;
   align-items: center; 
@@ -72,10 +71,9 @@ body {
   height: 46px;
 } 
 
-
 @media only screen and (max-width: 600px) {
   #head{
-    padding: 10px;
+    padding:10px 0px;
     font-size: 10px;
     height: 50px;
   }
