--- a/mapa4_graf/style.css
+++ b/mapa4_graf/style.css
@@ -22,14 +22,13 @@ body {
   height: 100%;
 }
 
-
 #nav {
   z-index: 1;
   position: absolute;
   top: 90%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 80%;
+  width: 100%;
   height: 60px;
   display: flex;
   align-items: center; 
@@ -54,12 +53,13 @@ body {
   text-decoration: none;
   width: 60px;
   height: 60px;
-  background-color: #ffffff;
+  background-color: rgb(255, 255, 255);
   border: 1px solid black;
   border-radius: 10px;
   display: flex;
   align-items: center; 
   justify-content: center;
+
 }
 
 #nav ul li a:link, #nav ul li a:visited {
@@ -73,7 +73,8 @@ body {
 
 @media only screen and (max-width: 600px) {
   #head{
+    padding:10px 0px;
     font-size: 10px;
-    height: 60px;
+    height: 50px;
   }
 }
