--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ body {
   height: 80px;
   width: 100%;
   font-family:Arial, Helvetica, sans-serif;
-  background-color: rgb(128, 128, 128);
-  color: rgb(248, 248, 248);
+  background-color: #707070;
+  color: white;
   font-size: 16px;
 }
 
@@ -28,7 +28,7 @@ body {
   top: 90%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 80%;
+  width: 100%;
   height: 60px;
   display: flex;
   align-items: center; 
@@ -71,10 +71,10 @@ body {
   height: 46px;
 } 
 
-
 @media only screen and (max-width: 600px) {
   #head{
+    padding:10px 0px;
     font-size: 10px;
-    height: 60px;
+    height: 50px;
   }
 }
