--- a/style.css
+++ b/style.css
@@ -7,13 +7,13 @@ body {
 
 .head {
   z-index: 1;
-  position: fixed;
-  top: 0;
-  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
   height: 80px;
   width: 100%;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Trebuchet MS', sans-serif;
   background-color: #707070;
   color: white;
   font-size: 16px;
@@ -39,6 +39,11 @@ body {
   height: 100%;
 }
 
+@media only screen and (max-width: 600px) {
+  .head {
+    font-size: 10px;
+  }
+}
 #nav {
   z-index: 1;
   position: absolute;
